/*!
* @file
* @brief IPrivacyAmplify
*
* @copyright Copyright (C) University of Bristol 2017
*    This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. 
*    If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
*    See LICENSE file for details.
* @date 23/01/2018
* @author Richard Collins <richard.collins@bristol.ac.uk>
*/
syntax = "proto3";
import public "google/protobuf/empty.proto";

package cqp.remote;

/**
 * @brief The IPrivacyAmplify class
 */
service IPrivacyAmplify {

    /**
    * @param reader Reference data
    * @return status
    */
    rpc AmplifyPrivacy(stream AmplificationDetails) returns (google.protobuf.Empty);

}

/// TBD
message AmplificationDetails {
    uint64 frameId = 1;
    double leakProbability = 2;
    string hashFunction = 3;
}
